Add ValidationChainBuilder for in Validator and changelog-master.xml for liquibase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 
 #docelowo do zmiany
-spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.hibernate.ddl-auto=validate 
+
+# Konfiguracja Liquibase
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
