--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.jpa.hibernate.ddl-auto=validate
 
 # Konfiguracja Liquibase
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
+open.weather.api.key=${OPEN_WEATHER_API_KEY}
+open.weather.api.url=https://api.openweathermap.org/data/2.5/
+
+accuweather.weather.api.key=${ACCUWEATHER_API_KEY}
+accuweather.weather.api.url=https://dataservice.accuweather.com/locations/v1/postalcodes/search
