Refactor: AccuWeatherServiceImplTest and OpenWeatherServiceImplTest

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ open.weather.api.key=${OPEN_WEATHER_API_KEY}
 open.weather.api.url=https://api.openweathermap.org/data/2.5/
 
 accuweather.weather.api.key=${ACCUWEATHER_API_KEY}
-accuweather.weather.api.url=https://dataservice.accuweather.com/locations/v1/postalcodes/search
+accuweather.weather.api.url=https://dataservice.accuweather.com
