--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,5 +1,9 @@
 open.weather.api.key=test_key
 open.weather.api.url=http://localhost:8081/data/2.5/
 
+accuweather.api.key.test=test_key1
+accuweather.api.url.test=http://localhost:8081/dataservice.accuweather.com
+
+
 spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
