--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,12 @@
             <version>3.9.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.vladmihalcea</groupId>
+            <artifactId>hibernate-types-60</artifactId>
+            <version>2.21.1</version>
+        </dependency>
+
 
 
     </dependencies>
