--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ open.weather.api.url=https://api.openweathermap.org/data/2.5/
 
 accuweather.weather.api.key=${ACCUWEATHER_API_KEY}
 accuweather.weather.api.url=https://dataservice.accuweather.com
+
+spring.profiles.active=local
+
+spring.devtools.restart.enabled=false
+
+
+
+
