Add cron configuration for weather_api_responses table Delete RedisCache and implemented cache mechanism

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,11 @@ spring.profiles.active=local
 
 spring.devtools.restart.enabled=false
 
+# Konfiguracja Schedule
+scheduling.enabled=true
+weather.cleanup.cron=0 0 0/5 * * ? 
+
+
 
 
 
