refactor WeatherCleanupServiceIntegrationTest, remove unnecessary dependencies and refactor IntegrationTestConfig

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,6 +4,10 @@ open.weather.api.url=http://localhost:8081/data/2.5/
 accuweather.api.key.test=test_key1
 accuweather.api.url.test=http://localhost:8081/dataservice.accuweather.com
 
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.minimum-idle=5
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
