--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,37 @@
+# Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/database-weather
 spring.datasource.username=postgres
 spring.datasource.password=root
 
-#docelowo do zmiany
+# Hibernate and JPA Configuration
 spring.jpa.hibernate.ddl-auto=validate 
 
-# Konfiguracja Liquibase
+# Liquibase Configuration
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
+# API Keys and URLs
+# OpenWeather API Configuration
 open.weather.api.key=${OPEN_WEATHER_API_KEY}
 open.weather.api.url=https://api.openweathermap.org/data/2.5/
 
+# AccuWeather API Configuration
 accuweather.weather.api.key=${ACCUWEATHER_API_KEY}
 accuweather.weather.api.url=https://dataservice.accuweather.com
 
+# Active Spring Profile
 spring.profiles.active=local
 
+# Spring DevTools
 spring.devtools.restart.enabled=false
 
-# Konfiguracja Schedule
+# Scheduling Configuration
 scheduling.enabled=true
 weather.cleanup.cron=0 0 0/5 * * ?
+
+# JWT Configuration
+jwt.expiration=86400000
+jwt.secret=secret
+
 
 
 
