--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ weather.cleanup.cron=0 0 0/5 * * ?
 
 # JWT Configuration
 jwt.expiration=86400000
-jwt.secret=secret
+jwt.secret=Uz0DU87F3f0gh2sK3fH92LfkJH93FhfG2X9k3LsF5Dhj8L1P
 
 
 
