--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -11,3 +11,9 @@ spring.datasource.hikari.minimum-idle=5
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
+# JWT Configuration
+jwt.secret=longAsecureRRandomkkeyHherePwithAatAleastk32Ccharacters
+
+spring.main.allow-bean-definition-overriding=true
+
