--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -13,7 +13,11 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
 # JWT Configuration
-jwt.secret=longAsecureRRandomkkeyHherePwithAatAleastk32Ccharacters
+#jwt.secret=longAsecureRRandomkkeyHherePwithAatAleastk32Ccharacters
+jwt.secret=fT6Xaw63iZBz9Ldd50Zd+Y3L1QzZj45sQ5+JZixrXRE=
+jwt.reset-secret=fT6Xaw63iZBz9Ldd50Zd+Y3L1QzZj45sQ5+JZixrXRE=
 
 spring.main.allow-bean-definition-overriding=true
+
+spring.liquibase.enabled=true
 
