Fix: stabilize tests and clean up obsolete code

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,8 +1,8 @@
 open.weather.api.key=test_key
 open.weather.api.url=http://localhost:8081/data/2.5/
 
-accuweather.api.key.test=test_key1
-accuweather.api.url.test=http://localhost:8081/dataservice.accuweather.com
+accuweather.weather.api.key=test_key1
+accuweather.weather.api.url=http://localhost:8081
 
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.maximum-pool-size=10
